--- a/convert_to_pdf/pom.xml
+++ b/convert_to_pdf/pom.xml
@@ -65,6 +65,13 @@
     <artifactId>openpdf</artifactId>
     <version>2.0.3</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
